--- a/nyakuvengwa-portfolio/src/components/HeaderLink.astro
+++ b/nyakuvengwa-portfolio/src/components/HeaderLink.astro
@@ -1,24 +1,22 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+import type { HTMLAttributes } from "astro/types";
 
-type Props = HTMLAttributes<'a'>;
+type Props = HTMLAttributes<"a">;
 
 const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
-const isActive = href === pathname || href === pathname.replace(/\/$/, '');
+const isActive = href === pathname || href === pathname.replace(/\/$/, "");
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
+    <slot />
 </a>
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+    a {
+        @apply text-gray-800  mx-1.5 sm:mx-6;
+    }
+    a.active {
+        @apply border-b-2 border-blue-500;
+    }
 </style>
