--- a/nyakuvengwa-portfolio/src/pages/index.astro
+++ b/nyakuvengwa-portfolio/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import HomeHero from "../components/HomeHero.astro";
 ---
 
 <!doctype html>
@@ -13,7 +14,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     <body>
         <Header title={SITE_TITLE} />
         <main>
-            <h1>🦖</h1>
+            <HomeHero />
         </main>
         <Footer />
     </body>
